--- a/src/main/res/layout/sex_choise_item.xml
+++ b/src/main/res/layout/sex_choise_item.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="3dp"
+    android:gravity="center_vertical"
+    android:minHeight="40dp"
+    android:paddingLeft="10dp"
     android:textColor="@color/list_text_black"
     android:textSize="16sp" />
