--- a/src/main/res/values/arrays.xml
+++ b/src/main/res/values/arrays.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string-array name="sex">
+        <item>@string/im_boy</item>
+        <item>@string/im_girl</item>
+    </string-array>
+
     <string-array name="feedback_items">
         <item>@string/settings_error_message</item>
         <item>@string/settings_ask_developer</item>
