--- a/src/main/res/layout/promo_popup.xml
+++ b/src/main/res/layout/promo_popup.xml
@@ -54,6 +54,7 @@
             android:layout_alignRight="@id/fakeView"
             android:layout_alignTop="@id/fakeView"
             android:layout_marginRight="2dp"
+            android:ellipsize="end"
             android:padding="6dp"
             android:singleLine="true"
             android:text="@string/buying_vip_status"
@@ -68,6 +69,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignTop="@id/fakeView"
             android:layout_marginLeft="2dp"
+            android:ellipsize="end"
             android:padding="6dp"
             android:singleLine="true"
             android:text="@string/general_delete_messages"
