--- a/src/main/res/layout/edit_dialog_radiobutton.xml
+++ b/src/main/res/layout/edit_dialog_radiobutton.xml
@@ -7,8 +7,8 @@
         android:id="@+id/editor_check"
         style="@style/WhiteListItem"
         android:background="@drawable/filter_light_edit_form_dialog_background_color_selector"
+        android:checked="false"
         android:drawablePadding="5dp"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:checked="false" />
+        android:paddingRight="16dp" />
 </FrameLayout>
