--- a/src/main/res/layout/fragment_topface_account.xml
+++ b/src/main/res/layout/fragment_topface_account.xml
@@ -14,9 +14,9 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
@@ -46,16 +46,16 @@
             </RelativeLayout>
 
             <Button
-                style="@style/FlatButton.Blue"
                 android:id="@+id/btnChange"
+                style="@style/Widget.Topface.Button.Big.Blue"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/change_password"
                 android:visibility="gone" />
 
             <Button
-                style="@style/FlatButton.Gray"
                 android:id="@+id/btnChangeEmail"
+                style="@style/Widget.Topface.Button.Big.Gray"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -63,8 +63,8 @@
                 android:visibility="gone" />
 
             <Button
-                style="@style/FlatButton.Gray"
                 android:id="@+id/btnLogout"
+                style="@style/Widget.Topface.Button.Big.Gray"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -72,8 +72,8 @@
                 android:visibility="visible" />
 
             <Button
-                style="@style/FlatButton.Gray"
                 android:id="@+id/btnCodeWasSend"
+                style="@style/Widget.Topface.Button.Big.Gray"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
