--- a/src/main/res/layout/item_feed_layout_heart.xml
+++ b/src/main/res/layout/item_feed_layout_heart.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:id="@+id/ifp_heart"
-        style="@style/FeedHeart" />
+        style="@style/FeedHeart.Selector" />
 
     <LinearLayout
         android:layout_width="wrap_content"
