--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -485,6 +485,10 @@
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
+    <style name="FeedHeart.Selector">
+        <item name="android:src">@drawable/heart_selector</item>
+    </style>
+
     <style name="FeedHeart">
         <item name="android:layout_width">@dimen/list_avatar_size</item>
         <item name="android:layout_height">@dimen/list_avatar_size</item>
@@ -492,7 +496,6 @@
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:scaleType">center</item>
         <item name="android:tint">@null</item>
-        <item name="android:src">@drawable/heart_selector</item>
     </style>
 
     <style name="NavigationBarAvatar">
