--- a/src/main/res/layout/invites_popup.xml
+++ b/src/main/res/layout/invites_popup.xml
@@ -4,8 +4,8 @@
     android:id="@+id/loInvitesPopup"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/black_60_percent">
+    android:background="@color/black_60_percent"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/loDialog"
@@ -19,9 +19,9 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical"
+            android:paddingBottom="20dp"
             android:paddingLeft="42dp"
             android:paddingRight="42dp"
-            android:paddingBottom="20dp"
             android:paddingTop="30dp">
 
             <TextView
@@ -30,19 +30,18 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
-                android:minHeight="50dp"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
 
             <TextView
                 android:id="@+id/checkBoxTitle"
-                android:textColor="@color/bg_main"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingTop="30dp"
+                android:gravity="left"
                 android:paddingBottom="28dp"
+                android:paddingTop="30dp"
                 android:text="@string/invite_friends_title_short"
+                android:textColor="@color/black_60_percent"
                 android:textSize="16sp" />
 
             <Button
@@ -50,8 +49,8 @@
                 style="@style/Widget.Topface.Button.Big.Blue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minWidth="276dp"
-                android:minHeight="40dp"/>
+                android:minHeight="40dp"
+                android:minWidth="276dp" />
         </LinearLayout>
 
         <ImageView
