--- a/src/main/res/layout/promo_popup.xml
+++ b/src/main/res/layout/promo_popup.xml
@@ -22,8 +22,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:gravity="center"
-            android:minHeight="50dp"
+            android:gravity="left"
+            android:paddingLeft="6dp"
             android:text="@string/general_attention"
             android:textSize="20sp" />
 
@@ -32,10 +32,11 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/airMessagesTitle"
-            android:gravity="center"
+            android:gravity="left"
+            android:paddingLeft="6dp"
             android:paddingBottom="28dp"
             android:paddingTop="30dp"
-            android:textColor="@color/bg_main"
+            android:textColor="@color/black_60_percent"
             android:textSize="16sp" />
 
         <View
@@ -55,7 +56,6 @@
             android:layout_alignTop="@id/fakeView"
             android:layout_marginRight="2dp"
             android:ellipsize="end"
-            android:padding="6dp"
             android:singleLine="true"
             android:text="@string/buying_vip_status"
             android:textSize="14sp" />
