#37476: ripple inside filter fragment

--- a/src/main/res/layout/city_search_drop_down_view.xml
+++ b/src/main/res/layout/city_search_drop_down_view.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/citySearchText"
-        style="@style/SpinnerDropDownView"
+        style="@style/SpinnerDropDownView.Selector"
         android:textSize="14sp" />
 
 </LinearLayout>
