--- a/src/main/res/layout/spinner_text_layout.xml
+++ b/src/main/res/layout/spinner_text_layout.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView style="@style/SpinnerDropDownView" />
+<TextView style="@style/SpinnerDropDownView.Selector" />
