--- a/src/main/res/drawable/btn_blue_shape_pressed.xml
+++ b/src/main/res/drawable/btn_blue_shape_pressed.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/button_corners_radius" />
-    <solid android:color="#62c4f5" />
+    <solid android:color="@color/button_blue_bg_pressed_color" />
 </shape>
