--- a/src/main/res/drawable/btn_gray_shape_normal.xml
+++ b/src/main/res/drawable/btn_gray_shape_normal.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/button_corners_radius" />
-    <solid android:color="#fcfcfc" />
+    <solid android:color="@color/button_gray_bg_released_color" />
 </shape>
