--- a/src/main/res/drawable/btn_red_shape_disabled.xml
+++ b/src/main/res/drawable/btn_red_shape_disabled.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="2dp" />
-    <solid android:color="#fab9b9" />
+    <solid android:color="@color/button_red_bg_disable_color" />
 </shape>
