--- a/src/main/res/drawable-v21/btn_white_selector.xml
+++ b/src/main/res/drawable-v21/btn_white_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?android:colorControlHighlight">
-    <item android:drawable="@drawable/btn_white_bg" />
+    android:color="@color/button_white_bg_pressed_color">
+    <item android:drawable="@drawable/btn_white_selector_v21" />
 </ripple>
