--- a/src/main/res/layout/item_left_menu_button_with_photo.xml
+++ b/src/main/res/layout/item_left_menu_button_with_photo.xml
@@ -3,9 +3,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/LeftMenuViewStyle">
 
-    <com.topface.topface.ui.views.ImageViewRemote xmlns:ivr="http://schemas.android.com/apk/res/com.topface.topface"
+    <com.topface.topface.ui.views.ImageViewRemote xmlns:ivr="http://schemas.android.com/apk/res-auto"
         android:id="@+id/image_icon"
-        xmlns:ivr="http://schemas.android.com/apk/res-auto"
         android:layout_width="@dimen/left_menu_background_height"
         android:layout_height="@dimen/left_menu_background_height"
         android:layout_alignParentLeft="true"
