--- a/src/main/res/drawable/tab_divider.xml
+++ b/src/main/res/drawable/tab_divider.xml
@@ -4,6 +4,7 @@
         android:right="-1dp"
         android:top="-1dp">
         <shape android:shape="rectangle">
+            <solid android:color="@color/bg_white" />
             <stroke
                 android:width="1dp"
                 android:color="@color/gray_divider" />
