--- a/src/main/res/layout/fragment_profile.xml
+++ b/src/main/res/layout/fragment_profile.xml
@@ -6,28 +6,20 @@
     android:background="@color/bg_white"
     android:focusableInTouchMode="true">
 
-    <LinearLayout
-        android:id="@+id/tab_layout_wrapper"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/profileTabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/tab_divider"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/profileTabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            app:tabIndicatorColor="@color/tab_text_color" />
-    </LinearLayout>
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/tab_text_color" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vpFragments"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bg_white"
-        android:layout_below="@id/tab_layout_wrapper" />
+        android:layout_below="@id/profileTabs"
+        android:background="@color/bg_white" />
 
     <com.topface.topface.ui.views.ProgressBarWithAlpha
         android:id="@+id/viewPagerLoader"
