--- a/src/main/res/layout/fragment_tabbed_feed.xml
+++ b/src/main/res/layout/fragment_tabbed_feed.xml
@@ -5,21 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/tab_layout_wrapper"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/feedTabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/tab_divider"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/feedTabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            app:tabIndicatorColor="@color/tab_text_color" />
-    </LinearLayout>
+        app:tabIndicatorColor="@color/tab_text_color"
+        app:tabGravity="fill" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
