--- a/src/main/res/layout/purchases_fragment.xml
+++ b/src/main/res/layout/purchases_fragment.xml
@@ -6,27 +6,19 @@
     android:layout_height="fill_parent"
     android:background="@color/bg_white">
 
-    <LinearLayout
-        android:id="@+id/tab_layout_wrapper"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/purchasesTabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/tab_divider"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/purchasesTabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            app:tabIndicatorColor="@color/tab_text_color" />
-    </LinearLayout>
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/tab_text_color" />
 
 
     <android.support.v4.view.ViewPager
         android:id="@+id/purchasesPager"
-        android:background="@color/bg_white"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tab_layout_wrapper" />
+        android:layout_below="@id/purchasesTabs"
+        android:background="@color/bg_white" />
 </RelativeLayout>
