--- a/src/main/res/layout/fragment_profile.xml
+++ b/src/main/res/layout/fragment_profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/tab_divider"
         app:tabGravity="fill"
-        app:tabIndicatorColor="@color/tab_text_color" />
+        app:tabIndicatorColor="@color/tab_text_color_selected" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vpFragments"
