--- a/src/main/res/layout/tab_indicator.xml
+++ b/src/main/res/layout/tab_indicator.xml
@@ -8,11 +8,13 @@
         android:id="@+id/tab_title"
         android:ellipsize="end"
         android:layout_weight="1"
+        android:textColor="@color/tab_title_color"
         style="@style/TabIndicatorHoloStyle"/>
 
     <TextView
         android:id="@+id/tab_counter"
         android:paddingLeft="3dp"
         android:layout_weight="0"
+        android:textColor="@color/tab_counter_color"
         style="@style/TabIndicatorHoloStyle"/>
 </LinearLayout>
