--- a/src/main/res/layout/fragment_feed.xml
+++ b/src/main/res/layout/fragment_feed.xml
@@ -3,8 +3,8 @@
     android:id="@+id/loControlsGroup"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="@color/bg_white">
+    android:background="@color/bg_white"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/feedContainer"
@@ -18,21 +18,22 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true" />
 
-        <com.topface.PullToRefreshListView xmlns:p2r="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/lvFeedList"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:cacheColorHint="#00000000"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp"
-            android:fadeScrollbars="true"
-            android:fadingEdge="none"
-            p2r:ptrHeaderTextColor="#8A8A8A"
-            p2r:ptrOverScroll="false"
-            p2r:ptrShowIndicator="false"
-            p2r:ptrDrawable="@drawable/spinner_16_inner_holo"
-            p2r:ptrHideTextInVerticalMode="true"
-            android:listSelector="@android:color/transparent" />
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/lvFeedList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:cacheColorHint="#00000000"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="0dp"
+                android:fadeScrollbars="true"
+                android:fadingEdge="none"
+                android:listSelector="@android:color/transparent" />
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <com.topface.topface.ui.views.LockerView
             android:id="@+id/llvFeedLoading"
