#39960: cut long city title

--- a/src/main/res/layout/actionbar_container_title_view.xml
+++ b/src/main/res/layout/actionbar_container_title_view.xml
@@ -43,6 +43,8 @@
                 style="@style/Widget.Topface.ActionBar.Subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
                 android:visibility="gone" />
         </LinearLayout>
     </LinearLayout>
