--- a/src/main/res/layout/edit_dialog_text.xml
+++ b/src/main/res/layout/edit_dialog_text.xml
@@ -13,5 +13,6 @@
         android:gravity="center_vertical"
         android:layout_gravity="center_horizontal"
         android:inputType="textCapSentences"
+        android:textSize="18sp"
         android:layout_margin="15dp" />
 </FrameLayout>
