--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -3,12 +3,10 @@
 
     <style name="Widget"></style>
 
-    <style name="TopfaceAuthText">
+    <style name="TopfaceAuthText" parent="topfaceEditText">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:textSize">16sp</item>
         <item name="android:gravity">center_horizontal|left</item>
-        <item name="android:background">@drawable/auth_et_selector</item>
     </style>
 
     <style name="AuthButton">
@@ -99,7 +97,7 @@
     <style name="topfaceEditText">
         <item name="android:textCursorDrawable" tools:ignore="NewApi">@null</item>
         <item name="android:cursorVisible">true</item>
-        <item name="android:background">@drawable/edittext_selector</item>
+        <item name="android:background">@drawable/edit_text_selector</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textColor">#393939</item>
         <item name="android:focusable">true</item>
@@ -107,18 +105,17 @@
         <item name="android:clickable">true</item>
         <item name="android:enabled">true</item>
         <item name="android:minHeight">@dimen/edit_text_min_height</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="topfaceEditText.Holo">
-        <item name="android:background">@drawable/edittext_holo_selector</item>
+    <style name="topfaceEditText.Holo" parent="topfaceEditText">
         <item name="android:textColorHint">#8A8A8A</item>
         <item name="android:textColor">#333333</item>
-        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="topfaceAutoCompleteEditText" parent="@style/Widget.AppCompat.AutoCompleteTextView">
         <item name="android:cursorVisible">true</item>
-        <item name="android:background">@drawable/edittext_selector</item>
+        <item name="android:background">@drawable/edit_text_selector</item>
         <item name="android:padding">5dp</item>
         <item name="android:textColor">#393939</item>
         <item name="android:minHeight">@dimen/edit_text_min_height</item>
@@ -962,29 +959,20 @@
         </item>
     </style>
 
-    <style name="SettingsAccountEditText">
+    <style name="SettingsAccountEditText" parent="topfaceEditText.Holo">
         <item name="android:paddingLeft">6dp</item>
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/edittext_holo_selector</item>
-        <item name="android:focusable">true</item>
-        <item name="android:focusableInTouchMode">true</item>
         <item name="android:singleLine">true</item>
-        <item name="android:textColor">#333333</item>
-        <item name="android:textColorHint">#8A8A8A</item>
-        <item name="android:textSize">16sp</item>
         <item name="android:gravity">left</item>
     </style>
 
-    <style name="EditTextEnterLeaderText">
+    <style name="EditTextEnterLeaderText" parent="topfaceEditText.Holo">
         <item name="android:layout_marginLeft">6dp</item>
         <item name="android:layout_marginRight">6dp</item>
         <item name="android:layout_marginTop">36dp</item>
-        <item name="android:background">@drawable/add_leader_input</item>
         <item name="android:hint">@string/add_leader_hint</item>
         <item name="android:gravity">left</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:cacheColorHint">#8A8A8A</item>
         <item name="android:shadowColor">#E6FFFFFF</item>
         <item name="android:shadowDx">1</item>
         <item name="android:shadowDy">1</item>
@@ -1112,8 +1100,7 @@
     </style>
 
     <style name="WhiteBackgroundEdit" parent="topfaceEditText.Holo">
-        <item name="android:textSize">16sp</item>
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">top|left</item>
         <item name="android:layout_marginTop">20dp</item>
