--- a/src/main/res/layout/item_feed_part_name.xml
+++ b/src/main/res/layout/item_feed_part_name.xml
@@ -7,12 +7,14 @@
     <TextView
         android:id="@+id/ifp_name"
         style="@style/ListName"
+        android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/ifp_age"
         style="@style/ListAge"
+        android:layout_weight="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
