#14217: add landscape mode to all autorization screens

--- a/src/main/res/layout/ac_filter_light_theme.xml
+++ b/src/main/res/layout/ac_filter_light_theme.xml
@@ -55,6 +55,7 @@
                     android:id="@+id/loFilterChooseCity"
                     style="@style/CitySearchView"
                     android:layout_width="fill_parent"
+                    android:imeOptions="flagNoExtractUi"
                     android:layout_height="wrap_content"
                     app:request_key="CITY_SEARCH_FROM_FILTER_ACTIVITY" />
 
