--- a/src/main/res/layout/topface_registration.xml
+++ b/src/main/res/layout/topface_registration.xml
@@ -28,7 +28,7 @@
                 style="@style/TopfaceAuthText"
                 android:layout_marginTop="28dp"
                 android:hint="@string/email"
-                android:imeOptions="actionNext"
+                android:imeOptions="actionNext|flagNoExtractUi"
                 android:inputType="textEmailAddress" />
 
             <RelativeLayout
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:hint="@string/password"
-                    android:imeOptions="actionNext"
+                    android:imeOptions="actionNext|flagNoExtractUi"
                     android:inputType="textPassword"
                     android:paddingRight="24dp" />
 
@@ -64,7 +64,7 @@
                 style="@style/TopfaceAuthText"
                 android:layout_marginTop="28dp"
                 android:hint="@string/edit_name"
-                android:imeOptions="actionNext"
+                android:imeOptions="actionNext|flagNoExtractUi"
                 android:inputType="text" />
 
             <LinearLayout
