--- a/src/main/res/layout/add_leader_grid_view_header.xml
+++ b/src/main/res/layout/add_leader_grid_view_header.xml
@@ -18,6 +18,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/buttonsContainer"
+        android:imeOptions="flagNoExtractUi"
         android:maxLines="2" />
 
 </RelativeLayout>
