--- a/src/main/res/layout/edit_dialog_text.xml
+++ b/src/main/res/layout/edit_dialog_text.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:imeOptions="flagNoExtractUi"
+        android:imeOptions="actionDone|flagNoExtractUi"
         android:layout_gravity="center_horizontal"
         android:inputType="textCapSentences"
         android:layout_margin="15dp" />
