--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -969,6 +969,7 @@
         <item name="android:background">@drawable/edittext_holo_selector</item>
         <item name="android:focusable">true</item>
         <item name="android:focusableInTouchMode">true</item>
+        <item name="android:imeOptions">flagNoExtractUi</item>
         <item name="android:singleLine">true</item>
         <item name="android:textColor">#333333</item>
         <item name="android:textColorHint">#8A8A8A</item>
@@ -1243,5 +1244,11 @@
         <item name="android:listSelector">
             @drawable/filter_light_edit_form_dialog_background_color_selector
         </item>
+    </style>
+
+    <style name="UserInfoTextStyle">
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 </resources>
