--- a/src/main/res/layout/layout_empty_bookmarks.xml
+++ b/src/main/res/layout/layout_empty_bookmarks.xml
@@ -27,7 +27,7 @@
 
     <Button
         android:id="@+id/btnStartRate"
-        style="@style/FlatButton.Blue.Emptyfeed"
+        style="@style/BigStretchedBlueButton"
         android:layout_below="@+id/tvText"
         android:layout_centerHorizontal="true"
         android:text="@string/general_get_dating" />
