--- a/src/main/res/layout/fragment_form.xml
+++ b/src/main/res/layout/fragment_form.xml
@@ -37,9 +37,9 @@
 
         <Button
             android:id="@+id/btnEmptyForm"
-            style="@style/FlatGrayButton"
-            android:layout_width="224dp"
-            android:layout_height="40dp"
+            style="@style/Widget.Topface.Button.Big.Gray"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="20dp"
