--- a/src/main/res/layout/item_settings_no_notifications.xml
+++ b/src/main/res/layout/item_settings_no_notifications.xml
@@ -31,7 +31,7 @@
         android:id="@+id/buttonNoNotificationsSetServices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/FlatButton.Gray"
+        style="@style/Widget.Topface.Button.Big.Gray"
         android:layout_marginTop="@dimen/base_indent"
         android:layout_marginBottom="@dimen/base_indent"/>
 
