--- a/src/main/res/layout/layout_empty_fans.xml
+++ b/src/main/res/layout/layout_empty_fans.xml
@@ -29,7 +29,7 @@
 
     <Button
         android:id="@+id/btnBuy"
-        style="@style/FlatButton.Blue.Emptyfeed"
+        style="@style/BigStretchedBlueButton"
         android:layout_below="@+id/tvText"
         android:layout_centerHorizontal="true"
         android:text="@string/buying_vip_status" />
