--- a/src/main/res/layout/layout_empty_mutual.xml
+++ b/src/main/res/layout/layout_empty_mutual.xml
@@ -31,15 +31,13 @@
 
         <Button
             android:id="@+id/btnRefill"
-            style="@style/FlatButton.Blue.Emptyfeed"
-            android:layout_weight="1"
+            style="@style/BigStretchedBlueButton"
             android:text="@string/buy_resources" />
 
         <Button
             android:id="@+id/btnGetDating"
-            style="@style/FlatButton.Gray.Emptyfeed"
+            style="@style/BigStretchedGrayButton"
             android:layout_marginTop="12dp"
-            android:layout_weight="1"
             android:text="@string/general_get_dating" />
 
     </LinearLayout>
