--- a/src/main/res/layout/layout_empty_visitors.xml
+++ b/src/main/res/layout/layout_empty_visitors.xml
@@ -31,7 +31,7 @@
 
     <Button
         android:id="@+id/btnBuyVip"
-        style="@style/FlatButton.Blue.Emptyfeed"
+        style="@style/BigStretchedBlueButton"
         android:layout_below="@+id/tvText"
         android:layout_centerHorizontal="true"
         android:text="@string/buying_vip_status" />
