--- a/src/main/res/layout/restore_account_activity.xml
+++ b/src/main/res/layout/restore_account_activity.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:paddingTop="76dp">
 
     <ImageView
@@ -14,35 +14,29 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:paddingTop="44dp"
+        android:gravity="center_horizontal"
+        android:paddingBottom="20dp"
         android:paddingLeft="30dp"
         android:paddingRight="30sp"
+        android:paddingTop="44dp"
+        android:text="@string/delete_account_will_be_restored_are_you_sure"
         android:textColor="#000000"
-        android:paddingBottom="20dp"
-        android:gravity="center_horizontal"
-        android:text="@string/delete_account_will_be_restored_are_you_sure" />
+        android:textSize="18sp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
         android:id="@+id/restore_account"
-        style="@style/FlatButton.Blue"
-        android:text="@string/restore"
+        style="@style/BigStretchedBlueButton"
         android:minHeight="44dp"
-        android:minWidth="236dp" />
+        android:text="@string/restore"
+        android:textSize="18sp" />
 
     <Button
-        android:layout_marginTop="12dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/FlatButton.Gray"
-        android:text="@string/general_cancel"
         android:id="@+id/cancel_restore"
-        android:textSize="18sp"
+        style="@style/BigStretchedGrayButton"
+        android:layout_marginTop="12dp"
         android:minHeight="44dp"
-        android:minWidth="236dp" />
+        android:text="@string/general_cancel"
+        android:textSize="18sp" />
 
 
 </LinearLayout>
