--- a/src/main/res/layout/fragment_tabbed_feed.xml
+++ b/src/main/res/layout/fragment_tabbed_feed.xml
@@ -12,7 +12,7 @@
         android:background="@drawable/tab_divider"
         app:tabIndicatorColor="@color/tab_text_color_selected"
         app:tabMode="scrollable"
-        app:tabContentStart="73dp"
+        app:tabContentStart="@dimen/tablayout_padding"
         app:tabGravity="fill" />
 
     <android.support.v4.view.ViewPager
