#39720 прозрачный статус бар, разметка для девайсов с плохим разрешением ужимается, регистрация в соответствии с дизайном, поправил баги со скрытием пароля

--- a/src/main/res/layout/topface_registration.xml
+++ b/src/main/res/layout/topface_registration.xml
@@ -96,7 +96,7 @@
                     android:gravity="center"
                     android:paddingTop="10dp"
                     android:text="@string/birthday"
-                    android:textColor="#234144"
+                    android:textColor="@color/registration_hint_color"
                     android:textSize="16sp" />
             </LinearLayout>
 
