--- a/src/main/res/values-pt/strings-profile.xml
+++ b/src/main/res/values-pt/strings-profile.xml
@@ -42,6 +42,7 @@
     <string name="profile_form_character_female_0">Fácil</string>
     <string name="profile_form_character_female_1">Difícil</string>
     <string name="profile_form_character_female_2">Determinada</string>
+    <string name="profile_form_character_female_3">Submissiva</string>
     <string name="profile_form_character_female_4">Calma</string>
     <string name="profile_form_character_female_5">Inquieta</string>
     <string name="profile_form_character_female_6">Ainda ninguém se queixou</string>
