--- a/src/main/res/values-xxhdpi/dimens.xml
+++ b/src/main/res/values-xxhdpi/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="chat_date_line_size">2px</dimen>
     <dimen name="tab_bar_default_bottom_border_height">2px</dimen>
+    <dimen name="tf_logo_top">72dp</dimen>
+    <dimen name="tf_logo_bottom">44dp</dimen>
+    <dimen name="tf_auth_btn_top">44dp</dimen>
 </resources>
