--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -759,10 +759,10 @@
         <item name="android:minHeight">50dp</item>
         <item name="android:paddingLeft">15dp</item>
         <item name="android:paddingRight">15dp</item>
-        <item name="android:paddingTop">10dp</item>
-        <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textStyle">normal</item>
         <item name="android:gravity">center</item>
         <item name="android:textAllCaps" tools:ignore="NewApi">false</item>
     </style>
