--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -59,4 +59,6 @@
 
     <!--set elevation value for lollipop views-->
     <dimen name="buttons_elevation_value">1dp</dimen>
+
+    <dimen name="express_message_button_min_width">214dp</dimen>
 </resources>
