--- a/src/main/res/color/color_chat_btn_text.xml
+++ b/src/main/res/color/color_chat_btn_text.xml
@@ -2,5 +2,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false" android:color="#2F2F2F" />
-    <item android:color="#222222" />
+    <item android:color="@color/eighty_seven_opacity_from_black" />
 </selector>
